updated font family

--- a/public/css/employeeDash.css
+++ b/public/css/employeeDash.css
@@ -8,4 +8,6 @@
     --sidebar-menu-header-color: #2B2118;
     --sidebar-logo-color: #2B2118;
     --bs-body-color: #2B2118;
+    --font-family-base: Roboto;
+    --bs-body-font-family: Roboto;
 }
